[gd_scene load_steps=10 format=3 uid="uid://c41pxy4cmaqds"]

[ext_resource type="Texture2D" uid="uid://de5gcf1tp3lti" path="res://Assets/Blocks/terrain.png" id="1_a6t71"]
[ext_resource type="Script" path="res://Header/header.gd" id="1_aa68u"]
[ext_resource type="PackedScene" uid="uid://bcny8yb2b31m8" path="res://Logo/logo.tscn" id="2_adkoc"]
[ext_resource type="Texture2D" uid="uid://cic3kichoce8q" path="res://Assets/Items/dynamite-pack6.png" id="3_qwvo4"]
[ext_resource type="Texture2D" uid="uid://e80baaucwn22" path="res://Assets/Items/key6.png" id="5_s3gmt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t7q7q"]
texture = ExtResource("1_a6t71")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0

[sub_resource type="TileSet" id="TileSet_5gpgh"]
sources/0 = SubResource("TileSetAtlasSource_t7q7q")

[sub_resource type="LabelSettings" id="LabelSettings_2ooes"]
font_color = Color(1, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pbna2"]
font_color = Color(0, 0, 0, 1)

[node name="Header" type="Node2D"]
script = ExtResource("1_aa68u")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 576.0
offset_bottom = 64.0
color = Color(0, 0, 0, 1)

[node name="TileMap" type="TileMap" parent="."]
modulate = Color(1, 1, 1, 0.556863)
tile_set = SubResource("TileSet_5gpgh")
format = 2
layer_0/tile_data = PackedInt32Array(0, 131072, 4, 65536, 131072, 5, 1, 196608, 4, 65537, 196608, 5, 131072, 131072, 4, 196608, 131072, 5, 131073, 196608, 4, 196609, 196608, 5, 2, 131072, 4, 65538, 131072, 5, 3, 196608, 4, 65539, 196608, 5, 131074, 131072, 4, 196610, 131072, 5, 131075, 196608, 4, 196611, 196608, 5, 4, 131072, 4, 65540, 131072, 5, 5, 196608, 4, 65541, 196608, 5, 131076, 131072, 4, 196612, 131072, 5, 131077, 196608, 4, 196613, 196608, 5, 6, 131072, 4, 65542, 131072, 5, 7, 196608, 4, 65543, 196608, 5, 131078, 131072, 4, 196614, 131072, 5, 131079, 196608, 4, 196615, 196608, 5, 8, 131072, 4, 65544, 131072, 5, 9, 196608, 4, 65545, 196608, 5, 131080, 131072, 4, 196616, 131072, 5, 131081, 196608, 4, 196617, 196608, 5, 10, 131072, 4, 65546, 131072, 5, 11, 196608, 4, 65547, 196608, 5, 131082, 131072, 4, 196618, 131072, 5, 131083, 196608, 4, 196619, 196608, 5, 12, 131072, 4, 65548, 131072, 5, 13, 196608, 4, 65549, 196608, 5, 131084, 131072, 4, 196620, 131072, 5, 131085, 196608, 4, 196621, 196608, 5, 14, 131072, 4, 65550, 131072, 5, 15, 196608, 4, 65551, 196608, 5, 131086, 131072, 4, 196622, 131072, 5, 131087, 196608, 4, 196623, 196608, 5, 16, 131072, 4, 65552, 131072, 5, 17, 196608, 4, 65553, 196608, 5, 131088, 131072, 4, 196624, 131072, 5, 131089, 196608, 4, 196625, 196608, 5, 18, 131072, 4, 65554, 131072, 5, 19, 196608, 4, 65555, 196608, 5, 131090, 131072, 4, 196626, 131072, 5, 131091, 196608, 4, 196627, 196608, 5, 20, 131072, 4, 65556, 131072, 5, 21, 196608, 4, 65557, 196608, 5, 131092, 131072, 4, 196628, 131072, 5, 131093, 196608, 4, 196629, 196608, 5, 22, 131072, 4, 65558, 131072, 5, 23, 196608, 4, 65559, 196608, 5, 131094, 131072, 4, 196630, 131072, 5, 131095, 196608, 4, 196631, 196608, 5, 24, 131072, 4, 65560, 131072, 5, 25, 196608, 4, 65561, 196608, 5, 131096, 131072, 4, 196632, 131072, 5, 131097, 196608, 4, 196633, 196608, 5, 26, 131072, 4, 65562, 131072, 5, 27, 196608, 4, 65563, 196608, 5, 131098, 131072, 4, 196634, 131072, 5, 131099, 196608, 4, 196635, 196608, 5, 28, 131072, 4, 65564, 131072, 5, 29, 196608, 4, 65565, 196608, 5, 131100, 131072, 4, 196636, 131072, 5, 131101, 196608, 4, 196637, 196608, 5, 30, 131072, 4, 65566, 131072, 5, 31, 196608, 4, 65567, 196608, 5, 131102, 131072, 4, 196638, 131072, 5, 131103, 196608, 4, 196639, 196608, 5, 32, 131072, 4, 65568, 131072, 5, 33, 196608, 4, 65569, 196608, 5, 131104, 131072, 4, 196640, 131072, 5, 131105, 196608, 4, 196641, 196608, 5, 34, 131072, 4, 65570, 131072, 5, 35, 196608, 4, 65571, 196608, 5, 131106, 131072, 4, 196642, 131072, 5, 131107, 196608, 4, 196643, 196608, 5)

[node name="Logo" parent="." instance=ExtResource("2_adkoc")]
offset_left = 8.0
offset_top = 8.0
offset_right = 120.0
offset_bottom = 56.0

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 136.0
offset_top = 16.0
offset_right = 560.0
offset_bottom = 48.0
color = Color(1, 1, 1, 0.376471)

[node name="Bombs" type="Node2D" parent="."]

[node name="Dynamite-pack6" type="Sprite2D" parent="Bombs"]
position = Vector2(168, 32)
texture = ExtResource("3_qwvo4")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="NumOfBombs" type="Label" parent="Bombs"]
offset_left = 186.0
offset_top = 16.0
offset_right = 226.0
offset_bottom = 48.0
text = "x 5 "
label_settings = SubResource("LabelSettings_2ooes")
vertical_alignment = 1

[node name="Score" type="Node2D" parent="."]

[node name="Score" type="Label" parent="Score"]
offset_left = 240.0
offset_top = 16.0
offset_right = 288.0
offset_bottom = 48.0
text = "Score:"
label_settings = SubResource("LabelSettings_pbna2")
vertical_alignment = 1

[node name="Points" type="Label" parent="Score"]
offset_left = 296.0
offset_top = 16.0
offset_right = 384.0
offset_bottom = 48.0
text = "0"
vertical_alignment = 1

[node name="Buttons" type="Node2D" parent="."]

[node name="ExitButton" type="Button" parent="Buttons"]
offset_left = 507.0
offset_top = 19.0
offset_right = 555.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 12
text = "EXIT"

[node name="Key" type="Node2D" parent="."]

[node name="Key_no" type="Sprite2D" parent="Key"]
modulate = Color(0.262745, 0.262745, 0.262745, 1)
position = Vector2(420, 32)
texture = ExtResource("5_s3gmt")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="Key_yes" type="Sprite2D" parent="Key"]
visible = false
position = Vector2(420, 32)
texture = ExtResource("5_s3gmt")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_exit_button_pressed"]
